src/objects/Consolidated_Account_Code__c.object
<CustomObject>
    <description>Master object to store Consolidated Account codes</description>
    <fields>
        <fullName>Base_Region__c</fullName>
        <label>Base Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AP - South Asia-Pacific</fullName>
                </value>
                <value>
                    <fullName>CO - Correction Region</fullName>
                </value>
                <value>
                    <fullName>EU - EMEA</fullName>
                </value>
                <value>
                    <fullName>GC - Greater China</fullName>
                </value>
                <value>
                    <fullName>JP - Japan</fullName>
                </value>
                <value>
                    <fullName>KR - Korea</fullName>
                </value>
                <value>
                    <fullName>NA - Americas</fullName>
                </value>
                <value>
                    <fullName>WW - WW Central FC Corr.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code_Description__c</fullName>
        <label>Code Description</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Owner_Name__c</fullName>
        <formula>IF( 
ISBLANK(Code_Owner__c) , 
&apos;&apos;, 
Code_Owner__r.First_Name__c + &apos; &apos; + Code_Owner__r.Last_Name__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Owner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Code Owner</label>
        <referenceTo>Hub_Contact__c</referenceTo>
        <relationshipLabel>Consolidated Account Codes</relationshipLabel>
        <relationshipName>Consolidated_Account_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Category__c</fullName>
        <inlineHelpText>T1:Rev in 100s M$/ $100Ms growth over 3 yrs 
T2:Rev in 20-100M$/$50Ms growth over 3 yrs 
T3:Rev 3-20M$/$5M growth over 3 yrs
T4 TMMA:supported by both NXP FSE &amp; Disti
T4 RoM:supported by Disti, lead by NXP manager
T4 Longtail:catalog/web user/startup</inlineHelpText>
        <label>Customer Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>ROM</fullName>
                </value>
                <value>
                    <fullName>TIER 1</fullName>
                </value>
                <value>
                    <fullName>TIER 2</fullName>
                </value>
                <value>
                    <fullName>TIER 3</fullName>
                </value>
                <value>
                    <fullName>TMMA</fullName>
                </value>
                <value>
                    <fullName>LONGTAIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Priority__c</fullName>
        <label>Delivery Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10 - Priority 1</fullName>
                </value>
                <value>
                    <fullName>20 - Priority 2</fullName>
                </value>
                <value>
                    <fullName>30 - Priority 3</fullName>
                </value>
                <value>
                    <fullName>40 - Priority 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Customer_GID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>End Customer GID</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>End Customer should be NXP Ultimate Parent.</errorMessage>
            <filterItems>
                <field>Customer__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Global_Enterprise</value>
            </filterItems>
            <infoMessage>End Customer should be NXP Ultimate Parent.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Consolidated Account Codes</relationshipLabel>
        <relationshipName>Consolidated_Account_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Customer_Legal_Name__c</fullName>
        <formula>IF( 
ISBLANK( End_Customer_GID__c ) , 
&apos;&apos;, 
End_Customer_GID__r.Legal_Name__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Customer Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSM_Org__c</fullName>
        <label>GSM Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Dist&amp;MMkt</fullName>
                </value>
                <value>
                    <fullName>S&amp;C/DN/RF</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Segment__c</fullName>
        <label>Industry Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA - Automotive</fullName>
                </value>
                <value>
                    <fullName>BB - C&amp;I</fullName>
                </value>
                <value>
                    <fullName>CC - Computing</fullName>
                </value>
                <value>
                    <fullName>DD - Distribution</fullName>
                </value>
                <value>
                    <fullName>EE - EMS</fullName>
                </value>
                <value>
                    <fullName>FF - Infrastructure</fullName>
                </value>
                <value>
                    <fullName>GG - Mobile</fullName>
                </value>
                <value>
                    <fullName>HH - Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Sub_Segment__c</fullName>
        <label>Industry Sub Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry_Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A1 - Automotive</fullName>
                </value>
                <value>
                    <fullName>B1 - Consumer &amp; HA</fullName>
                </value>
                <value>
                    <fullName>B2 - Gaming</fullName>
                </value>
                <value>
                    <fullName>B3 - Imaging</fullName>
                </value>
                <value>
                    <fullName>B4 - Industrial</fullName>
                </value>
                <value>
                    <fullName>B5 - Lighting</fullName>
                </value>
                <value>
                    <fullName>B6 - Power Supply</fullName>
                </value>
                <value>
                    <fullName>B7 - White Goods</fullName>
                </value>
                <value>
                    <fullName>B8 - Healthcare</fullName>
                </value>
                <value>
                    <fullName>B9 - Smart Home&amp;Building</fullName>
                </value>
                <value>
                    <fullName>C1 - Computing</fullName>
                </value>
                <value>
                    <fullName>C2 - Computing - Power Supply</fullName>
                </value>
                <value>
                    <fullName>C3 - Data Center</fullName>
                </value>
                <value>
                    <fullName>D1 - Distribution</fullName>
                </value>
                <value>
                    <fullName>E1 - EMS</fullName>
                </value>
                <value>
                    <fullName>F1 - Infrastructure</fullName>
                </value>
                <value>
                    <fullName>F2 - Network</fullName>
                </value>
                <value>
                    <fullName>G1 - Mobile</fullName>
                </value>
                <value>
                    <fullName>G2 - Wearables</fullName>
                </value>
                <value>
                    <fullName>H1 - Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PD_Key_Account__c</fullName>
        <label>PD Key Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACB - ACBEL</fullName>
                </value>
                <value>
                    <fullName>ACG - ACG</fullName>
                </value>
                <value>
                    <fullName>ADA - ADVANIDE</fullName>
                </value>
                <value>
                    <fullName>ADW - ANDREW CORP.</fullName>
                </value>
                <value>
                    <fullName>ALC - ALCATEL</fullName>
                </value>
                <value>
                    <fullName>ALP - ALPS</fullName>
                </value>
                <value>
                    <fullName>AMP - Ampleon</fullName>
                </value>
                <value>
                    <fullName>AMZ - Amazon</fullName>
                </value>
                <value>
                    <fullName>API - ALPINE</fullName>
                </value>
                <value>
                    <fullName>APP - Apple</fullName>
                </value>
                <value>
                    <fullName>ARA - Arrow Americas</fullName>
                </value>
                <value>
                    <fullName>ARE - Arrow Europe</fullName>
                </value>
                <value>
                    <fullName>ARG - Arrow Greater China</fullName>
                </value>
                <value>
                    <fullName>ARK - Arrow Korea</fullName>
                </value>
                <value>
                    <fullName>ARP - Arrow Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>ASA - Assa abloy</fullName>
                </value>
                <value>
                    <fullName>ASU - Asustek</fullName>
                </value>
                <value>
                    <fullName>AVE - Avnet Europe</fullName>
                </value>
                <value>
                    <fullName>AVG - Avnet Greater China</fullName>
                </value>
                <value>
                    <fullName>AVJ - AVNET Japan</fullName>
                </value>
                <value>
                    <fullName>AVK - Avnet Korea</fullName>
                </value>
                <value>
                    <fullName>AVP - Avnet Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>AVU - Avnet Americas</fullName>
                </value>
                <value>
                    <fullName>AVY - AVERY DENNISON CORP</fullName>
                </value>
                <value>
                    <fullName>BDR - Bundesdruckerei</fullName>
                </value>
                <value>
                    <fullName>BEC - Harman Becker</fullName>
                </value>
                <value>
                    <fullName>BOS - Bosch</fullName>
                </value>
                <value>
                    <fullName>BRC - Broadcom</fullName>
                </value>
                <value>
                    <fullName>BSE - BOSE</fullName>
                </value>
                <value>
                    <fullName>BYD - BYD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <label>Sales Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AMEC Auto</fullName>
                </value>
                <value>
                    <fullName>AMEC Bay</fullName>
                </value>
                <value>
                    <fullName>AMEC Central</fullName>
                </value>
                <value>
                    <fullName>AMEC Dist</fullName>
                </value>
                <value>
                    <fullName>AMEC East</fullName>
                </value>
                <value>
                    <fullName>AMEC MMkt</fullName>
                </value>
                <value>
                    <fullName>AMEC SIS</fullName>
                </value>
                <value>
                    <fullName>AMEC West</fullName>
                </value>
                <value>
                    <fullName>EMEA Auto</fullName>
                </value>
                <value>
                    <fullName>EMEA Auto Car OEM</fullName>
                </value>
                <value>
                    <fullName>EMEA Auto MMkt</fullName>
                </value>
                <value>
                    <fullName>EMEA Bosch</fullName>
                </value>
                <value>
                    <fullName>EMEA Central</fullName>
                </value>
                <value>
                    <fullName>EMEA Continental</fullName>
                </value>
                <value>
                    <fullName>EMEA Dist&amp;MMkt</fullName>
                </value>
                <value>
                    <fullName>EMEA Ericsson</fullName>
                </value>
                <value>
                    <fullName>EMEA Nokia</fullName>
                </value>
                <value>
                    <fullName>EMEA P&amp;I</fullName>
                </value>
                <value>
                    <fullName>EMEA South&amp;UK</fullName>
                </value>
                <value>
                    <fullName>EMEA Valeo</fullName>
                </value>
                <value>
                    <fullName>GC Auto</fullName>
                </value>
                <value>
                    <fullName>GC C&amp;P</fullName>
                </value>
                <value>
                    <fullName>GC Dist&amp;MMkt</fullName>
                </value>
                <value>
                    <fullName>GC Mobile&amp;GKA</fullName>
                </value>
                <value>
                    <fullName>GC P&amp;I</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Japan Denso</fullName>
                </value>
                <value>
                    <fullName>Japan East</fullName>
                </value>
                <value>
                    <fullName>Japan OEM</fullName>
                </value>
                <value>
                    <fullName>Japan West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Consolidated Account Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Base_Region__c</columns>
        <columns>Code_Description__c</columns>
        <columns>Code_Owner__c</columns>
        <columns>Code_Owner_Name__c</columns>
        <columns>Customer_Category__c</columns>
        <columns>End_Customer_GID__c</columns>
        <columns>End_Customer_Legal_Name__c</columns>
        <columns>PD_Key_Account__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Consolidated Account Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consolidated Account Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CACC_should_be_unique</fullName>
        <active>true</active>
        <description>CACC should be unique</description>
        <errorConditionFormula>Name = VLOOKUP( $ObjectType.Consolidated_Account_Code__c.Fields.Name , $ObjectType.Consolidated_Account_Code__c.Fields.Name , Name ) &amp;&amp; Id &lt;&gt; VLOOKUP( $ObjectType.Consolidated_Account_Code__c.Fields.Id , $ObjectType.Consolidated_Account_Code__c.Fields.Name , Name )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Consolidated Account Code should be unique.</errorMessage>
    </validationRules>
</CustomObject>